feat(server): user DM route and slight refactors
